--- a/.gitignore
+++ b/.gitignore
@@ -53,3 +53,5 @@ SemestroProjektas/Library/ArtifactDB/Library/Artifacts/
 /SemestroProjektas/Library/ArtifactDB/Library/Artifacts/
 /Library/ArtifactDB
 /Library/ArtifactDB/Library/Artifacts/
+/Library/ArtifactDB/Library/Artifacts/*
+/Library/ArtifactDB/Library/Artifacts*
