--- a/SemestroProjektas/Assembly-CSharp.csproj
+++ b/SemestroProjektas/Assembly-CSharp.csproj
@@ -64,6 +64,7 @@
      <Compile Include="Assets\SampleScenes\Scripts\PlaceTargetWithMouse.cs" />
      <Compile Include="Assets\SampleScenes\Scripts\SlowMoButton.cs" />
      <Compile Include="Assets\Scripts\MainMenu.cs" />
+     <Compile Include="Assets\Scripts\PauseMenuu.cs" />
      <Compile Include="Assets\Scripts\pickUp.cs" />
      <Compile Include="Assets\Scripts\teleportOnCollide.cs" />
      <None Include="Assets\SampleScenes\Shaders\Skybox-Procedural.shader" />
