added pickUp2 Script
highlight nuemiau, gliucino labai

--- a/SemestroProjektas/Assembly-CSharp.csproj
+++ b/SemestroProjektas/Assembly-CSharp.csproj
@@ -66,40 +66,41 @@
      <Compile Include="Assets\Scripts\MainMenu.cs" />
      <Compile Include="Assets\Scripts\PauseMenuu.cs" />
      <Compile Include="Assets\Scripts\pickUp.cs" />
+     <Compile Include="Assets\Scripts\pickUp2.cs" />
      <Compile Include="Assets\Scripts\teleportOnCollide.cs" />
      <None Include="Assets\SampleScenes\Shaders\Skybox-Procedural.shader" />
  <Reference Include="Unity.Timeline.Editor">
- <HintPath>C:/Users/Name/Desktop/projektas/4-the-game/SemestroProjektas/Library/ScriptAssemblies/Unity.Timeline.Editor.dll</HintPath>
+ <HintPath>C:/Users/armed/OneDrive/Desktop/unity git/4-the-game/SemestroProjektas/Library/ScriptAssemblies/Unity.Timeline.Editor.dll</HintPath>
  </Reference>
  <Reference Include="Unity.VSCode.Editor">
- <HintPath>C:/Users/Name/Desktop/projektas/4-the-game/SemestroProjektas/Library/ScriptAssemblies/Unity.VSCode.Editor.dll</HintPath>
+ <HintPath>C:/Users/armed/OneDrive/Desktop/unity git/4-the-game/SemestroProjektas/Library/ScriptAssemblies/Unity.VSCode.Editor.dll</HintPath>
  </Reference>
  <Reference Include="Unity.TextMeshPro.Editor">
- <HintPath>C:/Users/Name/Desktop/projektas/4-the-game/SemestroProjektas/Library/ScriptAssemblies/Unity.TextMeshPro.Editor.dll</HintPath>
+ <HintPath>C:/Users/armed/OneDrive/Desktop/unity git/4-the-game/SemestroProjektas/Library/ScriptAssemblies/Unity.TextMeshPro.Editor.dll</HintPath>
  </Reference>
  <Reference Include="UnityEngine.UI">
- <HintPath>C:/Users/Name/Desktop/projektas/4-the-game/SemestroProjektas/Library/ScriptAssemblies/UnityEngine.UI.dll</HintPath>
+ <HintPath>C:/Users/armed/OneDrive/Desktop/unity git/4-the-game/SemestroProjektas/Library/ScriptAssemblies/UnityEngine.UI.dll</HintPath>
  </Reference>
  <Reference Include="Unity.Timeline">
- <HintPath>C:/Users/Name/Desktop/projektas/4-the-game/SemestroProjektas/Library/ScriptAssemblies/Unity.Timeline.dll</HintPath>
+ <HintPath>C:/Users/armed/OneDrive/Desktop/unity git/4-the-game/SemestroProjektas/Library/ScriptAssemblies/Unity.Timeline.dll</HintPath>
  </Reference>
  <Reference Include="Unity.CollabProxy.Editor">
- <HintPath>C:/Users/Name/Desktop/projektas/4-the-game/SemestroProjektas/Library/ScriptAssemblies/Unity.CollabProxy.Editor.dll</HintPath>
+ <HintPath>C:/Users/armed/OneDrive/Desktop/unity git/4-the-game/SemestroProjektas/Library/ScriptAssemblies/Unity.CollabProxy.Editor.dll</HintPath>
  </Reference>
  <Reference Include="Unity.Postprocessing.Editor">
- <HintPath>C:/Users/Name/Desktop/projektas/4-the-game/SemestroProjektas/Library/ScriptAssemblies/Unity.Postprocessing.Editor.dll</HintPath>
+ <HintPath>C:/Users/armed/OneDrive/Desktop/unity git/4-the-game/SemestroProjektas/Library/ScriptAssemblies/Unity.Postprocessing.Editor.dll</HintPath>
  </Reference>
  <Reference Include="Unity.Rider.Editor">
- <HintPath>C:/Users/Name/Desktop/projektas/4-the-game/SemestroProjektas/Library/ScriptAssemblies/Unity.Rider.Editor.dll</HintPath>
+ <HintPath>C:/Users/armed/OneDrive/Desktop/unity git/4-the-game/SemestroProjektas/Library/ScriptAssemblies/Unity.Rider.Editor.dll</HintPath>
  </Reference>
  <Reference Include="Unity.Postprocessing.Runtime">
- <HintPath>C:/Users/Name/Desktop/projektas/4-the-game/SemestroProjektas/Library/ScriptAssemblies/Unity.Postprocessing.Runtime.dll</HintPath>
+ <HintPath>C:/Users/armed/OneDrive/Desktop/unity git/4-the-game/SemestroProjektas/Library/ScriptAssemblies/Unity.Postprocessing.Runtime.dll</HintPath>
  </Reference>
  <Reference Include="Unity.TextMeshPro">
- <HintPath>C:/Users/Name/Desktop/projektas/4-the-game/SemestroProjektas/Library/ScriptAssemblies/Unity.TextMeshPro.dll</HintPath>
+ <HintPath>C:/Users/armed/OneDrive/Desktop/unity git/4-the-game/SemestroProjektas/Library/ScriptAssemblies/Unity.TextMeshPro.dll</HintPath>
  </Reference>
  <Reference Include="UnityEditor.UI">
- <HintPath>C:/Users/Name/Desktop/projektas/4-the-game/SemestroProjektas/Library/ScriptAssemblies/UnityEditor.UI.dll</HintPath>
+ <HintPath>C:/Users/armed/OneDrive/Desktop/unity git/4-the-game/SemestroProjektas/Library/ScriptAssemblies/UnityEditor.UI.dll</HintPath>
  </Reference>
  <Reference Include="UnityEngine.AIModule">
  <HintPath>C:/Program Files/Unity/Hub/Editor/2019.3.3f1/Editor/Data/Managed/UnityEngine/UnityEngine.AIModule.dll</HintPath>
